--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -165,3 +165,15 @@ main {
 #dcontent {
   font-size: 0.9em;
 }
+
+h4 {
+  color: rgb(125, 17, 82);
+}
+
+#subtotal {
+  border: none;
+  text-align: left;
+}
+#back {
+  color: blue;
+}
