--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -197,3 +197,14 @@ p {
 #steps {
   font-size: 0.9em;
 }
+#label {
+  font-size: 18px;
+}
+
+#order {
+  font-size: 18px;
+}
+#order th,
+td {
+  text-align: center;
+}
