--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,14 +5,14 @@ main {
   min-height: 80vh;
 }
 .navbar {
-  background-color: rgb(255, 243, 226);
+  background-color: rgb(254, 234, 188);
 }
 .navbar a {
   color: rgb(117, 43, 9);
 }
 
 #basic-navbar-nav {
-  background-color: rgb(255, 243, 226);
+  background-color: rgb(254, 234, 188);
   text-align: left;
 }
 
@@ -38,7 +38,7 @@ main {
   display: flex;
   justify-content: top;
   align-items: center;
-  box-shadow: 0 1px 5px rgba(108, 108, 108, 0.2);
+  box-shadow: 0 2px 15px rgba(108, 108, 108, 0.2);
   height: 23rem;
   transition: transform ease 0.5s;
 }
@@ -56,7 +56,7 @@ main {
 }
 #prodcategory {
   box-shadow: 0 1px 5px rgba(108, 108, 108, 0.2);
-  background-color: rgb(255, 247, 231);
+  background-color: rgb(254, 234, 188);
   justify-content: left;
   width: fit-content;
   padding: 1vh;
@@ -75,7 +75,14 @@ main {
   font-size: 18px;
   width: fit-content;
   text-transform: uppercase;
-  text-align: center;
+  text-align: left;
+}
+.rating span {
+  margin: 0.1rem;
+}
+
+#homepgrating {
+  font-size: 5px;
 }
 
 #prodcond {
@@ -93,7 +100,7 @@ main {
   text-align: center;
 }
 #prodprice {
-  font-size: 17px;
+  font-size: 0.9em;
   color: rgb(186, 50, 0);
 }
 #produpload {
@@ -207,4 +214,91 @@ p {
 #order th,
 td {
   text-align: center;
+}
+#search {
+  background-color: rgb(139, 51, 0);
+  border: 0;
+}
+#search:hover {
+  background-color: black;
+}
+#s {
+  border-color: rgb(233, 209, 198);
+  color: rgb(194, 118, 12);
+}
+#s:active,
+#s:focus {
+  box-shadow: none;
+}
+
+.page-link {
+  background-color: rgb(255, 230, 197);
+  color: rgb(109, 0, 0);
+}
+.page-link:hover {
+  background-color: rgb(255, 255, 255);
+  color: rgb(139, 51, 0);
+}
+
+.active > .page-link,
+.page-link.active {
+  color: rgb(255, 230, 197);
+  background-color: rgb(109, 0, 0);
+}
+
+.carousel {
+  background-color: rgba(254, 234, 188, 0.567);
+}
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  display: flex;
+}
+
+.carousel-caption {
+  position: absolute;
+  top: 0;
+}
+
+.carousel-caption h5 {
+  color: rgb(0, 0, 0);
+}
+
+.carousel-indicators button {
+  width: 0.5rem !important;
+  height: 0.5rem !important;
+  border-radius: 50%;
+}
+.carousel-indicators button:not(:active) {
+  margin-left: 0.5rem;
+  background-color: rgb(139, 51, 0);
+}
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 50px;
+  width: 50px;
+  filter: invert(100%);
+  border-radius: 50%;
+}
+.carousel img {
+  height: 200px;
+  width: 200px;
+  margin: 80px;
+
+  border-radius: 50%;
+}
+.carousel a {
+  margin: 0 auto;
+}
+
+@media (max-width: 900px) {
+  .carousel-caption h5 {
+    font-size: 1.5vw;
+  }
+}
+
+@media (max-width: 430px) {
+  .carousel {
+    display: none;
+  }
 }
